Add support c++17 (c++1z) for CMAKE_CXX_STANDARD
I have a problem with new CMake. I try to compile project, and some library (Qt) require at least c++11. But my project require c++17. So, cmake automatically add flag "-std=gnu++11".
I tried add flag "-std=c++1z" with add_compile_options(), but anyway gcc called with options
-std=c++1z -g -fPIC -fPIC -std=gnu++11
As you can see, cmake always add "-std=gnu++11" in the end, so add_compile_options() or modification CMAKE_CXX_FLAGS don't work.
Only one way that I found is setting CMAKE_CXX_STANDARD, but it doesn't support 17 or 1z, only 98, 11 and 14.
I think this is regression and make impossible build projects with custom flag "-std=".