Features: Add infrastructure for C++ 17 language standard

Issue: #16468